Merged revisions 76623 via svnmerge from svn+ssh://pythondev@svn.python.org/python/trunk

........
  r76623 | ronald.oussoren | 2009-12-01 16:54:01 +0100 (Tue, 01 Dec 2009) | 9 lines

  Fix for issue #7416: SIZEOF_UINTPTR_T can be invalid when configuring a
  multi-architecture build (in particular when the architectures don't share
  a common pointer size).

  Fixed the same issue for SIZEOF_PTHREAD_T.

  (No update to the NEWS file because this is a bugfix for an as yet unreleased
  feature)
........